2007-05-05  Jean-Christophe Baillie  <baillie@gostai.com>

	update test externals.

2007-05-05  Jean-Christophe Baillie  <baillie@gostai.com>

	update test externals.

2007-05-05  Jean-Christophe Baillie  <baillie@gostai.com>

	The bug appeared when a plugged UOwned UVar was notified on change and
	access, and a remote UObject var "notifychanging" it. UOwned was
	preventing the UVar::get call, from the autoloop mechanism used to make
	sure UVar that are both change/access notified are constantly updated.
	This security was not necessary because the UVar = operator was
	already preventing UOwner variable against notifychange calls when a
	notifyaccess was triggered.

	Fix bug in notifychange/access interaction with UOwned UVars. 
	* src/userver.cc: change UVariable::get usage.
	* src/uvariable.cc: remove double blocking mechanism, change get.
	* src/uvariable.hh: change UVarialbe::get API.

2007-05-01  Jean-Christophe Baillie  <baillie@gostai.com>

	add proper support for adaptive queues (following ticket #92) 
	* uconnection.hh: fix accessors, they do something now.
	* uqueue.hh: add accessor for adaptive_.

2007-05-01  Jean-Christophe Baillie  <baillie@gostai.com>

	update NEWS. 
	* NEWS: add note about UObject::send.

2007-05-01  Jean-Christophe Baillie  <baillie@gostai.com>

	update externals of uobject. 

2007-05-01  Jean-Christophe Baillie  <baillie@gostai.com>

	The problem here was that plugged UObjects were using the
	ghostconnection of URBI.INI, so anything that was initialized via
	urbi::send in the constructor was in fact executed *after* URBI.INI
	code. It was impossible to use the result of a new in URBI.INI if this
	new was introducing some dynamically created code, typically with
	walk.

	Now, every UObject has its own connection (in fact it's activated only
	if you use UObject::send). UObject::send is the method to use if you
	want to send code to URBI, from within a UObject. It works fine in
	plugged and remote mode.
	