@@ -31,9 +31,13 @@ class UNamedParameters
 public:
   UNamedParameters(UString* name,
 		   UExpression *expression,
-		   UNamedParameters* next=0);
+		   UNamedParameters* next=0,
+                   bool notifyEnd=false);
 
-  UNamedParameters(UExpression *expression, UNamedParameters* next = 0);
+  UNamedParameters(UExpression *expression,
+                   UNamedParameters* next = 0,
+                   bool notifyEnd=false);
+
   virtual ~UNamedParameters();
 
   void print() const;
