@@ -1,5 +1,13 @@
 2007-05-05  Jean-Christophe Baillie  <baillie@gostai.com>
 
+	fix bug #155 (+report inconsistant behavior) 
+	* src/ucommand.cc: donnot report the end of morphed commands.
+	* src/uconnection.cc: transmit the connection information during morphing.
+	* src/unamedparameters.cc: copy notifyEnd when copying flags.
+	* src/unamedparameters.hh: adapt ctor to contain notifyEnd.
+
+2007-05-05  Jean-Christophe Baillie  <baillie@gostai.com>
+
 	update test externals.
 
 2007-05-05  Jean-Christophe Baillie  <baillie@gostai.com>
